단어장 리스트 Acitivty 추가 (Recyclerview, dataBinding)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 android {
     namespace 'com.example.devvoca'
     compileSdk 33
+    dataBinding{
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.example.devvoca"
