--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name=".DevVocaApplicaiton"
         tools:targetApi="31">
         <activity
-            android:name=".VocaListActivity"
+            android:name=".VocaListFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
