--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         jcenter()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
     }
 }
 
@@ -11,3 +16,11 @@ plugins {
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
+
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
+
