Google 인증 라이브러리(play-services-auth) 및 Gson(Json변환 library) 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx:21.2.1'
     implementation 'com.google.firebase:firebase-crashlytics-ktx:18.3.6'
 
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
