My Page Fragment UI 구성 및 MPAndroidChart Library 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
 
 dependencies {
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+//    Char Library (2023.04.12 추가)
+
     apply plugin: 'kotlin-kapt'
     implementation "androidx.room:room-runtime:2.5.0"
     kapt "androidx.room:room-compiler:2.5.0"
