App 시작 시 구글 로그인 하지 않았다면 구글 로그인 activity 실행하도록 수정
단 구글 로그인 기준은 SharedPreferences사용 및 임시 이며 백엔드 서버와
연동하여 구글 로그인 기준을 파악해야 함(TODO)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,31 @@
         android:name=".DevVocaApplicaiton"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.view.MainActivity"
+            android:name=".presentation.view.LoginActivity"
             android:exported="true"
-            android:launchMode="singleTop"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+        </activity>
+
+        <activity android:name=".presentation.view.MainActivity"
+            android:launchMode="singleTask"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="com.exmaple.devocaMain"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+
+            </intent-filter>
+
         </activity>
     </application>
 </manifest>
