화면 추가 및 item.xml 추가
StudyFragment 추가
TodayFragment 추가
SearchFragment 추가
각 Fragment에 Viewmodel, Binding 추가

HomeFragment에서 진척도, 오늘의 단어 버튼 누를 시 해당 Fragment로 이동
이동 버튼은 디자인 X

SearchFragment 구현을 위한
items_search_list 추가
해당 list 구현 진행 중

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
 dependencies {
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 //    Char Library (2023.04.12 추가)
 
     apply plugin: 'kotlin-kapt'
